# Claudlet

./: .gitignore  CLAUDE.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  FEATURES_FOR_REVIEW.md  LICENSE  NOTICE  README.ko.md  README.md  REVIEW-2026-07-11-followup.md  TODO.md  install.py  pyproject.toml
.github/workflows/: publish.yml
docs/: claude-pet-demo.webm  configuration.ko.md  configuration.md  platform.ko.md  platform.md  usage.ko.md  usage.md
docs/superpowers/specs/: 2026-07-09-hook-state-policy-design.md  2026-07-09-session-bound-pets.md  2026-07-10-pet-motion-command-design.md  (+1 more)
packaging/: claudlet.desktop
scripts/: release.sh  release_notes.py
skills/claude-pet/: SKILL.md
src/: creature.py  focus.py  hostinfo.py  pet.py  petconfig.py  sprites.py  state_engine.py  windows.py  windows_win32.py
src/claude_pet/: __init__.py  __main__.py  creature.py  focus.py  hook.py  install.py  install_hooks.py  macos_diag.py  motion.py  pet.py  petconfig.py  windows_macos.py
src/claudlet/: __init__.py  __main__.py  attach.py  configcli.py  creature.py  hook.py  install.py  install_hooks.py  konsole.py  macos_diag.py  motion.py  pet.py  petconfig.py  roambounds.py  state_engine.py  uninstall.py  windows.py  windows_macos.py  windows_win32.py
tests/: conftest.py  test_asking_state.py  test_autopilot_state.py  test_configcli.py  test_creature_render.py  test_focus.py  test_hook_claude_pid.py  test_hook_payload.py  test_hostinfo.py  test_konsole.py  test_motion_helper.py  test_notch_hit.py  test_pet_smoke.py  test_petconfig.py  test_physics.py  test_relnotes.py  test_roambounds.py  test_sprites.py  test_state_engine.py  test_tray_icon.py  test_uninstall.py  test_versioncli.py  test_windows.py  test_windows_macos.py  test_windows_win32.py
tests/cli/: test_attach.py  test_install.py  test_install_hooks.py  test_uninstall.py
tests/integration/: test_hook_claude_pid.py  test_hook_payload.py  test_pet_smoke.py
tests/platform/: test_geom_macos.py  test_geom_win32.py
tests/unit/: test_asking_state.py  test_autopilot_state.py  test_configcli.py  test_creature_render.py  test_focus.py  test_follow_nav.py  test_geom.py  test_hostinfo.py  test_idle_engine.py  test_konsole.py  test_motion_helper.py  test_petconfig.py  test_physics.py  test_relnotes.py  test_social.py  test_state_engine.py  test_tray_icon.py  test_versioncli.py
(+15 files in other folders)
