[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claudlet"
dynamic = ["version"]
description = "A pixel desktop buddy that reacts to Claude Code in real time"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC0-1.0" }
authors = [{ name = "YeeDochi" }]
keywords = ["claude-code", "desktop-pet", "pyqt6", "hooks"]
dependencies = [
    "PyQt6",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/YeeDochi/Claudlet"

[project.scripts]
claudlet = "claudlet.pet:main"
claudlet-attach = "claudlet.attach:_cli"
claudlet-hook = "claudlet.hook:_cli"
claudlet-motion = "claudlet.motion:_cli"
claudlet-install = "claudlet.install:main"
claudlet-install-hooks = "claudlet.install_hooks:main"
claudlet-macos-diag = "claudlet.macos_diag:main"

[tool.setuptools.dynamic]
version = { attr = "claudlet.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudlet = ["skill/*"]
