[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claudlet"
dynamic = ["version"]
description = "A pixel desktop buddy that reacts to Claude Code in real time"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC0-1.0" }
authors = [{ name = "YeeDochi" }]
keywords = ["claude-code", "desktop-pet", "pyqt6", "hooks"]
dependencies = [
    "PyQt6",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/YeeDochi/Claudlet"

[project.scripts]
claudlet = "claudlet.pet:main"
claudlet-attach = "claudlet.cli.attach:_cli"
claudlet-hook = "claudlet.cli.hook:_cli"
claudlet-motion = "claudlet.cli.motion:_cli"
claudlet-install = "claudlet.cli.install:main"
claudlet-uninstall = "claudlet.cli.uninstall:_cli"
claudlet-install-hooks = "claudlet.cli.install_hooks:main"
claudlet-config = "claudlet.cli.configcli:_cli"
claudlet-version = "claudlet.cli.versioncli:_cli"
claudlet-macos-diag = "claudlet.cli.macos_diag:main"

[tool.setuptools.dynamic]
version = { attr = "claudlet.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudlet = ["skill/*"]
